# php-mustache

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  LICENSE  LICENSE.md  README.md  appveyor.psm1  appveyor.yml  bench.php  ci.nix  config.m4  config.w32  debian.control  default.nix  derivation.nix  examples.md  flake.nix  generate-tests.php  mkdeb.sh  mustache.cpp  mustache.hpp  mustache.php  mustache_ast.cpp  mustache_ast.hpp  mustache_class_method_lambda.cpp  mustache_class_method_lambda.hpp  mustache_code.cpp  mustache_code.hpp  mustache_data.cpp  mustache_data.hpp  mustache_exceptions.cpp  mustache_exceptions.hpp  mustache_lambda.cpp  mustache_lambda.hpp  mustache_lambda_helper.cpp  mustache_lambda_helper.hpp  (+14 more)
.ci/: appveyor.psm1  travis_nix.sh  travis_php.sh
.github/: php-alpine.Dockerfile  php-debian.Dockerfile  php-fedora.Dockerfile
cli/: Makefile.am  autogen.sh  configure.ac  jsonlint.c  jsonlint.h  mustachec.cpp  mustachec.hpp
debian/: changelog  control  mustache.ini  phpX-mustache.postinst  phpX-mustache.postrm  rules
native/: MustacheNative.php  MustacheNativeCompiler.php  MustacheNativeParser.php  MustacheNativeRenderer.php  MustacheNativeTokenizer.php  example.php  run-tests.php
nbproject/: project.xml
nix/: ci.nix  derivation.nix
php/: config.m4  generate-tests.php  php_mustache.cpp  php_mustache.hpp  php_mustache_methods.cpp  php_mustache_methods.hpp
src/: data.cpp  data.hpp  exception.hpp  mustache.cpp  mustache.hpp  node.cpp  node.hpp  renderer.cpp  renderer.hpp  tokenizer.cpp  tokenizer.hpp  utils.cpp  utils.hpp
tests/: MustacheAST____construct.phpt  MustacheAST____sleep.phpt  MustacheAST____toString.phpt  MustacheAST____wakeup-apc.phpt  MustacheAST____wakeup.phpt  MustacheAST__toArray.phpt  MustacheCode____construct.phpt  MustacheCode____sleep.phpt  MustacheCode____toString.phpt  MustacheCode____wakeup-apc.phpt  MustacheCode____wakeup.phpt  MustacheCode__toReadableString.phpt  (+307 more)
(+33 files in other folders)
