
AC_INIT([MustacheC], [0.1], [bug-report@example.com], [mustachec], [http://example.com/])
AC_PREREQ([2.59])
AM_INIT_AUTOMAKE([1.10 no-define foreign])
AC_CONFIG_HEADERS([config.h])
AC_PROG_CC
AC_PROG_CXX

PKG_CHECK_MODULES([LIBJSON], [libjson >= 1.0])

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
